--- a/index.html
+++ b/index.html
@@ -50,17 +50,21 @@
     
             <div class="footer">
                <h2 id="artext"> Redes sociais </h2>
+               <br><br>
+               <br>
                 
             <div class="logo">
-
-                <img title="Instagram" alt="Descrição" src="imagens/Inst.jpg"  width="40px" height="40px">
-            </div>
+                <a href="http://google.com">
+                <img class="imagens" title="Instagram" alt="Descrição" src="imagens/Inst.jpg"  width="40px" height="40px">
+            </div></a>
             <div class="logo">
-                <img title="Twiter" alt="Descrição" src="imagens/tw.jpg" width="40px" height="40px">
-            </div>
+                <a href="http://google.com">            
+                <img class="imagens" title="Twiter" alt="Descrição" src="imagens/tw.jpg" width="40px" height="40px">
+            </div></a>
             <div class="logo">
-                <img title="FaceBook" alt="Descrição" src="imagens/face.jpg" width="40px" height="40px">
-            </div>
+                <a href="http://google.com">
+                <img class="imagens" title="FaceBook" alt="Descrição" src="imagens/face.jpg" width="40px" height="40px">
+            </div></a>
 
                 <!-- Aqui vai o seu rodapé -->
             </div>
